<resources>
    <string name="app_name">providers_dashboard_app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="flowerzil_logo">flowerZIL logo</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">LogIn</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">sign Up</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="phone_number">Phone Number</string>
    <string name="store_name">Store Name</string>
    <string name="register">Register</string>
    <string name="title_activity_providers">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_details">User Details</string>
    <string name="provider_name">provider name</string>
    <string name="avatar_icon">avatar icon</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="my_items">My Items</string>
    <string name="delete_user">Delete User</string>
    <string name="edit_details">Edit Details</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="new_password">new password</string>
    <string name="save">save</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="add_bouquet">Add Bouquet</string>
    <string name="add">add</string>
    <string name="flower_image">flower image</string>
    <string name="contact_us">Contact Us</string>
    <string name="delete_item">delete item</string>
</resources>