<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.providersFragments.editDetails.changePasswordFragment">

    <EditText
        android:id="@+id/change_password_et"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:autofillHints="@string/email"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/save_bt_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_bt_change_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/green_light"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cancel_bt_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/cancel_bt_change_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="103dp"
        android:backgroundTint="@color/green_dark"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/edit_details_tv2"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:text="@string/change_password"
        android:textAlignment="center"
        android:textColor="@color/green_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>