<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.authFragments.signUp.signUpFragment">

    <TextView
        android:id="@+id/edit_details_tv"
        android:layout_width="223dp"
        android:layout_height="60dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="96dp"
        android:fontFamily="casual"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/green_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_et_edit_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_et_edit_details"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/email"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/password_et_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_details_tv" />

    <EditText
        android:id="@+id/password_et_sign_up"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/password"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:ems="10"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/first_name_et_edit_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et_edit_details" />

    <EditText
        android:id="@+id/first_name_et_edit_details"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/first_name"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/last_name_et_edit_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et_sign_up" />

    <EditText
        android:id="@+id/last_name_et_edit_details"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/last_name"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/phone_et_edit_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name_et_edit_details" />

    <EditText
        android:id="@+id/phone_et_edit_details"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/phone_number"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/store_name_et_edit_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_et_edit_details" />

    <EditText
        android:id="@+id/store_name_et_edit_details"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/store_name"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_store"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/store_name"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_et_edit_details" />

    <Button
        android:id="@+id/edit_bt_edit_details"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/green_light"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/cancel_bt_edit_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_name_et_edit_details"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/cancel_bt_edit_details"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:backgroundTint="@color/green_dark"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_bt_edit_details"
        tools:targetApi="lollipop" />

    <ProgressBar
        android:id="@+id/loader_sign_up"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/cancel_bt_edit_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store_name_et_edit_details" />

</androidx.constraintlayout.widget.ConstraintLayout>
