<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_bouquet_editable"
                android:layout_width="109dp"
                android:layout_height="101dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/flower_image"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/defaultbouquet" />

            <TextView
                android:id="@+id/title_bouquet_editable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="serif"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/description_bouquet_editable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_bouquet_editable"
                app:layout_constraintTop_toTopOf="@+id/img_bouquet_editable" />

            <TextView
                android:id="@+id/description_bouquet_editable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/img_bouquet_editable"
                app:layout_constraintTop_toBottomOf="@+id/title_bouquet_editable" />

            <ImageButton
                android:id="@+id/delete_bouquet_editable"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/delete_item"
                android:tint="#FF0303"
                app:layout_constraintBottom_toBottomOf="@+id/contact_us_bouquet_editable"
                app:layout_constraintEnd_toStartOf="@+id/contact_us_bouquet_editable"
                app:layout_constraintTop_toTopOf="@+id/contact_us_bouquet_editable"
                app:srcCompat="@android:drawable/ic_menu_delete" />

            <ImageButton
                android:id="@+id/edit_bouquet_editable"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:background="#00FFFFFF"
                android:contentDescription="@string/edit"
                android:tint="#E46F08"
                app:layout_constraintBottom_toBottomOf="@+id/delete_bouquet_editable"
                app:layout_constraintEnd_toStartOf="@+id/delete_bouquet_editable"
                app:layout_constraintTop_toTopOf="@+id/delete_bouquet_editable"
                app:srcCompat="@android:drawable/ic_menu_edit" />

            <ImageButton
                android:id="@+id/contact_us_bouquet_editable"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="#00FFFFFF"
                android:tint="@color/green_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_bouquet_editable"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <TextView
                android:id="@+id/store_name_editable_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/store_name"
                app:layout_constraintBottom_toBottomOf="@+id/img_bouquet_editable"
                app:layout_constraintEnd_toStartOf="@+id/edit_bouquet_editable"
                app:layout_constraintStart_toEndOf="@+id/img_bouquet_editable" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>