<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign_in_fragment" >

    <ImageView
        android:id="@+id/logo_sign_in"
        android:layout_width="386dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/flowerzil_logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/email_et_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_et_sign_in"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="@string/email"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/password_et_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_sign_in" />

    <EditText
        android:id="@+id/password_et_sign_in"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/password"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et_sign_in" />

    <Button
        android:id="@+id/sign_in_bt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/green_light"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et_sign_in"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/sign_up_bt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="145dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:backgroundTint="@color/green_dark"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_bt"
        tools:targetApi="lollipop"/>

    <ProgressBar
        android:id="@+id/loader_sign_in"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et_sign_in" />


</androidx.constraintlayout.widget.ConstraintLayout>